--- a/news_pumper/package.json
+++ b/news_pumper/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "base64-url": "^2.2.2",
     "cheerio": "^1.0.0-rc.3",
+    "redis": "^2.8.0",
     "ripemd160": "^2.0.2"
   }
 }
