--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,27 @@ services:
   pumper:
     image: node:lts
     volumes:
-      - ./:/home/app
+      - ./news_pumper:/home/app
+      - /watorvapor/ldfs/tagbot/news_discovery_db:/watorvapor/ldfs/tagbot/news_discovery_db
+    working_dir: "/home/app"
+    environment:
+      - MMAX=1G 
+      - ISDOCKER=true 
+    command: node app.js
+    networks:
+      - outside
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 1G
+        reservations:
+          cpus: '0.25'
+          memory: 64M
+  wordtag:
+    image: node:lts
+    volumes:
+      - ./wordtag:/home/app
       - /watorvapor/ldfs/tagbot/news_discovery_db:/watorvapor/ldfs/tagbot/news_discovery_db
     working_dir: "/home/app"
     environment:
