--- a/wordtag/package.json
+++ b/wordtag/package.json
@@ -11,9 +11,7 @@
   "dependencies": {
     "base64-url": "^2.2.2",
     "cheerio": "^1.0.0-rc.3",
-    "level": "^5.0.1",
     "redis": "^2.8.0",
-    "ripemd160": "^2.0.2",
-    "twitter": "^1.7.1"
+    "ripemd160": "^2.0.2"
   }
 }
